# fidenaro-core

./: .disabled.gitlab-ci.yml  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  run.sh
.docker/: dockerfile
app/: package.json
app/src/: index.js
frontend/: . dockerignore  Dockerfile  docker-commands.md  package-lock.json  package.json
frontend/public/: index.html  init_radswap_pool.rtm
frontend/src/: App.tsx  index.tsx
frontend/src/dummy_data/: vaults.json
frontend/src/etc/: TradingHistory.tsx  avatar.tsx  globals.d.ts  invest_button.tsx  investment_utils.ts  podium.tsx  wallet_connect.tsx
frontend/src/navigation/: nav_bar_bottom.tsx  nav_bar_top.tsx  sidebar.tsx
frontend/src/routes/: VaultView.tsx  chart.js  create.tsx  dashboard.tsx  docs copy.tsx  docs.tsx  earn.tsx  explore.js  explore.tsx  graph.tsx  home.tsx  leaderboard.tsx  trade.js
frontend/src/routes/create_vault/: create-vault-api.js  create-vault-ui.tsx
money-printer/: free_token.rtm  instantiate.rtm
oracle-bot/: main.js  main.ts  package-lock.json  package.json  tsconfig.json
scrypto/: Cargo.toml  TODO.md  dashboard_commands.md  database-calls.sh  run.sh
scrypto/bootstrapping-helper/radiswap/: Cargo.toml
scrypto/bootstrapping-helper/radiswap/src/: lib.rs
scrypto/bootstrapping-helper/trade-engine/: Cargo.toml
scrypto/bootstrapping-helper/trade-engine/src/: lib.rs
scrypto/fidenaro/: Cargo.toml  dashboard_commands.md  run.sh
scrypto/fidenaro/src/: lib.rs
scrypto/fidenaro/tests/: lib.rs
scrypto/libraries/ports-interface/: Cargo.toml
scrypto/libraries/ports-interface/src/: oracle.rs  pool.rs
scrypto/libraries/scrypto-interface/src/: handlers.rs
scrypto/manual_deployment_stokenet/: components.txt  packages.txt  pools.txt  resources.txt
scrypto/manual_deployment_stokenet/fidenaro/: insert_pool_information.rtm  instantiate.rtm  set_oracle_adapter.rtm  set_user_token_resource_address.rtm
scrypto/manual_deployment_stokenet/radiswap/: create_radiswap_btc_xrd_pool copy 2.rtm  create_radiswap_eth_xrd_pool copy.rtm  create_radiswap_hug_xrd_pool.rtm  create_radiswap_usdc_xrd_pool copy.rtm  provide_liquidity_radiswap_btc_xrd_pool.rtm  provide_liquidity_radiswap_eth_xrd_pool.rtm  provide_liquidity_radiswap_hug_xrd_pool.rtm  provide_liquidity_radiswap_usdc_xrd_pool.rtm
scrypto/manual_deployment_stokenet/radiswap-adapter/: instantiate.rtm
scrypto/manual_deployment_stokenet/simple-oracle/: instantiate.rtm  set_price.rtm
scrypto/manual_deployment_stokenet/trade-engine/: deposit_resource.rtm  instantiate.rtm
scrypto/manual_deployment_stokenet/trade-vault/: instantiate.rtm
scrypto/manual_deployment_stokenet/user-factory/: instantiate.rtm
scrypto/money-printer/: Cargo.toml  run.sh
scrypto/money-printer/src/: lib.rs
scrypto/radiswap/: Cargo.toml
scrypto/src/: fidenaro.rs  lib.rs  trade_vault.rs
scrypto/tests/: Cargo.toml  lib.rs
scrypto/tests/src/: common.rs  environment copy.rs  environment.rs  errors.rs  extensions.rs  lib.rs  prelude.rs  simulator_test_environment.rs  unit_test_environment.rs
scrypto/tests/tests/: lib.rs  simulator.rs  unit.rs
scrypto/tools/publishing-tool/: Cargo.toml
scrypto/tools/publishing-tool/src/: database_overlay.rs  error.rs  macros.rs  utils.rs
scrypto/tools/publishing-tool/src/cli/: bin.rs  publish.rs
scrypto/tools/publishing-tool/src/configuration_selector/: mod.rs  stokenet_testing.rs
scrypto/tools/publishing-tool/src/network_connection_provider/: execution_service.rs  gateway_connector.rs  mod.rs  traits.rs
scrypto/tools/publishing-tool/src/publishing/: configuration.rs  handler.rs
scrypto/trade-vault/: Cargo.toml
scrypto/trade-vault/src/: lib.rs
scrypto/trade-vault/tests/: lib.rs
scrypto/user-factory/: Cargo.toml
scrypto/user-factory/src/: lib.rs
scrypto/user-factory/tests/: lib.rs
spec/: abstract_design.uxf  class_diagram.uxf  user_stories.md
src/: fidenaro_treasury.rs  lib.rs  radswap.rs  trade_vault.rs
ui/: .gitignore  package-lock.json  package.json
ui/public/: index.html
ui/public/.well-known/: radix.json
ui/src/: Fidenaro.tsx  Layout.tsx  index.tsx
ui/src/components/Card/: CardTitle.tsx  CarouselCard.tsx  DescriptionCard.tsx  LinkCard.tsx  ManagerCard.tsx  PrimerCard.tsx  StatCard.tsx  Styled.ts  ValueCard.tsx
ui/src/components/Carousel/: CardCarousel.tsx
ui/src/components/Chart/: ChartCard.tsx  MinimalChartCard.tsx  ProfitBarChartCard.tsx
ui/src/components/FollowDialog/: FollowDialog.tsx
ui/src/components/Icon/: FidenaroIcon.tsx
ui/src/components/LeftNavigationBar/: LeftNavigationBar.tsx  LeftNavigationButton.tsx  LeftNavigationButtonIcon.tsx  NavigationItems.tsx  Styled.ts
ui/src/components/Podium/: Podium.tsx
ui/src/components/PriceTicker/: PriceTicker.tsx
ui/src/components/ProfileEditDialog/: ProfileEditDialog.tsx
ui/src/components/Table/: ProfileStatsTable.tsx  Styled.ts  VaultAssetTable.tsx  VaultFlowHistoryTable.tsx  VaultHistoryTable.tsx  VaultRankingTable.tsx
ui/src/components/Text/: PnlText.tsx  TruncatedValue.tsx
ui/src/components/TopNavigationBar/: Styled.ts  TopNavigationBar.tsx  WalletButton.tsx  radix-connect-button.d.ts
ui/src/components/VaultTable/: SortableTableHeader.tsx  Styled.ts  TableEntry.ts  TableEntryKeys.ts  VaultTable.tsx
ui/src/components/WinnerCard/: WinnerCard.tsx
ui/src/containers/Explore/: Explore.tsx
ui/src/containers/Portfolio/: Portfolio.tsx
ui/src/containers/Profile/: Explore.tsx  Profile.tsx
ui/src/containers/UnknownPage/: UnknownPage.tsx
ui/src/containers/Vault/: Vault.tsx
ui/src/containers/WallOfFame/: WallOfFame.tsx
ui/src/libs/charts/: MiniatureAreaChartApex.tsx
ui/src/libs/entities/: Asset.tsx  User.tsx  Vault.tsx
ui/src/libs/etc/: StringOperations.tsx
ui/src/libs/fidenaro/: Config.tsx
ui/src/libs/navigation/: LeftNavigationBarDataService.tsx
ui/src/libs/price/: PriceDataService.tsx
ui/src/libs/radix-dapp-toolkit/: rdt.tsx
ui/src/libs/size/: Dimensions.tsx  ScrollSize.tsx
ui/src/pages/: Layout.tsx
user-factory/: Cargo.toml
user-factory/src/: lib.rs
user-factory/tests/: lib.rs
(+71 files in other folders)
