[workspace]
resolver = "2"
# members = ["fidenaro", "trade-vault", "user-factory", "ports-interface"]
members = ["fidenaro", "trade-vault", "user-factory"]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "The implementation of project Fidenaro in Scrypto for the Radix Ledger"

[workspace.dependencies]
sbor = { version = "1.2.0" }
scrypto = { version = "1.2.0" }
scrypto-test = { version = "1.2.0" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
