[workspace]
resolver = "2"
members = [
    "packages/fidenaro",
    "packages/trade-vault",
    "packages/user-factory",
    "packages/simple-oracle",
    "packages/radiswap-adapter",
    "libraries/ports-interface",
    "libraries/scrypto-interface",
    "libraries/common",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "The implementation of project Fidenaro in Scrypto for the Radix Ledger"

[workspace.dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
utils = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }

scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }

state-manager = { git = "https://github.com/radixdlt/babylon-node", rev = "63a8267196995fef0830e4fbf0271bea65c90ab1" }

ports-interface = { path = "./libraries/ports-interface" }
scrypto-interface = { path = "./libraries/scrypto-interface" }
common = { path = "./libraries/common" }

env_logger = "0.11.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
