[package]
name = "tests"
version.workspace = true
edition.workspace = true
description = "A crate with unit and integration tests for Fidenaro"
# build = "build.rs"

[dependencies]
sbor = { workspace = true }
transaction = { workspace = true }
scrypto-test = { workspace = true }
scrypto-unit = { workspace = true }
radix-engine = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-interface = { workspace = true }

common = { workspace = true }
fidenaro = { path = "../packages/fidenaro", features = ["test"] }
simple-oracle = { path = "../packages/simple-oracle", features = ["test"] }
radiswap-adapter = { path = "../packages/radiswap-adapter", features = [
    "test",
    "manifest-builder-stubs",
] }
ports-interface = { workspace = true }
package-loader = { git = "https://github.com/radixdlt/Ignition", branch = "main" }

paste = { version = "1.0.14" }
extend = { version = "1.2.0" }
lazy_static = "1.4.0"

[build-dependencies]
flate2 = { version = "1.0.28" }

[lints]
workspace = true
