[package]
name = "tests"
version.workspace = true
edition.workspace = true
description = "A crate with unit and integration tests for Fidenaro"

[dependencies]
sbor = { workspace = true }
scrypto-test = { workspace = true }
radix-engine = { workspace = true }
radix-engine-interface = { workspace = true }

common = { workspace = true }
fidenaro = { path = "../packages/fidenaro", features = ["test"] }
simple-oracle = { path = "../packages/simple-oracle", features = ["test"] }
radiswap-adapter = { path = "../packages/radiswap-adapter", features = [
    "test",
    "manifest-builder-stubs",
] }
ports-interface = { workspace = true }

paste = { version = "1.0.15" }
extend = { version = "1.2.0" }
lazy_static = "1.5.0"

[build-dependencies]
flate2 = { version = "1.0.30" }

[lints]
workspace = true
