[package]
name = "tests"
version.workspace = true
edition.workspace = true
description = "A crate with unit and integration tests for Fidenaro"

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
scrypto-test = { workspace = true }
radix-engine = { workspace = true }
radix-engine-interface = { workspace = true }

common = { workspace = true }
fidenaro = { path = "../packages/fidenaro", features = ["test"] }
user-factory = { path = "../packages/user-factory", features = ["test"] }
trade-vault = { path = "../packages/trade-vault", features = ["test"] }
simple-oracle = { path = "../packages/simple-oracle", features = ["test"] }
trade-engine = { path = "../bootstrapping-helper/trade-engine", features = [
    "test",
] }
ports-interface = { workspace = true }
precision_pool = { workspace = true }
ociswap-v2-adapter = { path = "../packages/ociswap-v2-adapter", features = [
    "test",
    "manifest-builder-stubs",
] }

paste = { version = "1.0.15" }
extend = { version = "1.2.0" }

[build-dependencies]
flate2 = { version = "1.0.30" }

[lints]
workspace = true
