[package]
name = "trade-vault"
version.workspace = true
edition.workspace = true
description = "The implementation of the trade vault"

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }

[dev-dependencies]
scrypto-test = { workspace = true }
user-factory = { path = "../user-factory" }

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
