[package]
name = "user-factory"
version.workspace = true
edition.workspace = true
description = "The implementation of the user factory"

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }

[dev-dependencies]
scrypto-test = { workspace = true }

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true
