[package]
name = "ports-interface"
version.workspace = true
edition.workspace = true
description = "Defines the interface of the various adapters."

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
radix-common = { workspace = true }
radix-engine = { workspace = true }
radix-engine-interface = { workspace = true }
scrypto-interface = { workspace = true }
common = { workspace = true }

[features]
default = [
    "trait",
    "scrypto-stubs",
    "scrypto-test-stubs",
    "manifest-builder-stubs",
]
trait = []
scrypto-stubs = []
scrypto-test-stubs = []
manifest-builder-stubs = []

[lib]
crate-type = ["cdylib", "lib"]
proc-macro = true

[lints]
workspace = true
